Bug 975772 - Cleanup RectTriangles and allow DrawQuads to take triangles or triangle strips. r=bjacob